[Feature/#4] 이벤트 기반 아키텍처 구축 (#12)
* [#4] docs: 매칭 시 채팅방 생성 기능 설계 문서 작성

* [#4] feat: 이벤트 기록기 구현

* [#4] test: 이벤트 발행기 스레드 종류에 따른 테스트 수행

* [#4] docs: 이미지 이슈로 인해 문서 옵시디언으로 이동

* [#4] test: 이미지 발행기 테스트 재작성을 위해 기존 파일 제거

* [#4] feat: 카프카 초기 설계에 맞게 구현

* [#4] test: 비동기 이벤트 발행기에서 카프카를 사용하도록 변경한 뒤 테스트 작성

* [#4] feat: virtual thread pinning 확인 gradle task 등록

* [#4] feat: 카프카 멱등성 필터 로직 변경

* [#4] chore: 채팅방 관련 내용 제거

해당 이슈에서는 작업하지 않는다.